--- a/bankapp/templates/auth/register.html
+++ b/bankapp/templates/auth/register.html
@@ -6,10 +6,18 @@
 
 {% block content %}
   <form method="post">
-    <label for="username">Username</label>
+    <p>ToDo: validation and some fields based on spec</p>
+    <label for="username">User Name</label>
     <input name="username" id="username" required>
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
+    <label for="phone_number">Phone Number</label>
+    <input name="phone_number" id="phone_number" required>
+    <label for="email">Email</label>
+    <input name="email" id="email" required>
+    <label for="initial_balance">Inital Balance for deposit</label>
+    <input name="initial_balance" id="initial_balance" required>
+
     <input type="submit" value="Register">
   </form>
 {% endblock %}
