--- a/bankapp/templates/auth/register.html
+++ b/bankapp/templates/auth/register.html
@@ -29,7 +29,7 @@
       required
       oninvalid="this.setCustomValidity('Enter valid phone number')"
       oninput="this.setCustomValidity('')">
-    <label for="initial_balance">Inital Balance for Deposit</label>
+    <label for="initial_amount">Inital Amount for Deposit</label>
     <input
       name="initial_amount"
       id="initial_amount"
