feature-banckAccount function finished

--- a/bankapp/templates/account/index.html
+++ b/bankapp/templates/account/index.html
@@ -6,12 +6,14 @@
 
 {% block content %}
   {% if g.user %}
-    <h1>Current Account Balance</h1>
-    <p>If user login successfully, show info belows</p>
-    <p>Display current balance here</p>
+    <p>
+      <a class="action" href="{{ url_for('account.show_balance') }}">
+        Check Current Balance
+      </a>
+    </p>
     <p>
       <a class="action" href="{{ url_for('account.transaction') }}">
-        Deposit or Withdraw
+        Deposit or Withdraw Money
       </a>
     </p>
   {% endif %}
