--- a/bankapp/templates/account/transaction-result.html
+++ b/bankapp/templates/account/transaction-result.html
@@ -5,8 +5,22 @@
 {% endblock %}
 
 {% block content %}
-  <p>Show transaction result</p>
-  <p>Updated account balance</p>
-  <p>Button for redirect to home page</p>
-  <p>If failed, show the message</p>
+  <h3>Transaction result</h3>
+  <p> {{result_msg}} </p>
+ 
+
+
+  <h3>Current account balance</h3>
+  <p> {{balance}} </p>
+
+  <p>
+    <a class="action" href="{{ url_for('account.transaction') }}">
+        Back to transaction page
+    </a>
+  </p>
+  <p>
+    <a class="action" href="{{ url_for('index') }}">
+        Back to home page
+    </a>
+  </p>
 {% endblock %}
