--- a/bankapp/templates/account/index.html
+++ b/bankapp/templates/account/index.html
@@ -7,6 +7,9 @@
 {% block content %}
   {% if g.user %}
     <p>
+      <a href="{{ url_for('account.download_user_image') }}" download> Download User Image </a>
+    </p>
+    <p>
       <a class="action" href="{{ url_for('account.show_balance') }}">
         Check Current Balance
       </a>
