Put register-star button back and remove unused files

--- a/bankapp/templates/auth/register-start.html
+++ b/bankapp/templates/auth/register-start.html
@@ -12,6 +12,7 @@
       id="username"
       required
       oninvalid="this.setCustomValidity('Enter User Name')"
-      oninput="this.setCustomValidity('')">    
+      oninput="this.setCustomValidity('')">
+    <input type="submit" value="Next">
   </form>
 {% endblock %}
