--- a/bankapp/templates/auth/register.html
+++ b/bankapp/templates/auth/register.html
@@ -7,7 +7,10 @@
 {% block content %}
   <h2>Hi {{ username }} !</h2>
   <form method="post">
-    <p>Please note: all fields are required. Thank you.</p>
+    <ul>
+      <li>Note 1: all fields are required. Thank you.</li>
+      <li>Note 2: once you register successfully, you will have a default profile image on the homepage.</li>
+    </ul>
     <label for="password">Password</label>
     <input
       type="password"
